ENH: Improved SkylinkConnectionString generation
AND-710

Ensured SkylinkConnectionString was URL safe encoded.