@@ -13,8 +13,10 @@ import org.json.JSONObject;
 import org.webrtc.SurfaceViewRenderer;
 
 import java.io.UnsupportedEncodingException;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.net.URLEncoder;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
@@ -180,7 +182,7 @@ public class Utils {
 
 
     /**
-     * Returns the SkylinkConnectionString
+     * Returns the SkylinkConnectionString, which MUST BE URL SAFE.
      * Required inputs are: App key, App secret, Room name, Room start time, and Room duration.
      *
      * @param roomName  Name of the room
@@ -190,9 +192,8 @@ public class Utils {
      */
     public static String getSkylinkConnectionString(String roomName, Date startTime, int duration) {
 
-        Log.d(TAG, "Room name " + roomName);
-        Log.d(TAG, "startTime " + startTime);
-        Log.d(TAG, "duration " + duration);
+        String info = "Room name: " + roomName + ", startTime: " + startTime +
+                ", duration: " + duration + ".\r\n";
 
         // Convert the date in to ISO format
         String dateString = Utils.getISOTimeStamp(startTime);
@@ -203,28 +204,50 @@ public class Utils {
         try {
             cred = URLEncoder.encode(cred, "UTF-8");
         } catch (UnsupportedEncodingException e) {
-            Log.e(TAG, e.getMessage(), e);
+            String error = "[ERROR] Unable to encode credentials. Not joining room!"
+                    + "\nDetails: Could not URLEncode generated credentials."
+                    + "\nException: " + e.getMessage();
+            Log.e(TAG, error);
+            return null;
         }
 
-        // Encode roomName so that it is url safe.
-        String roomNameEncoded = null;
-        URI uri = null;
+        // Ensure connectionString is url safe
+        // This is very IMPORTANT!!!
+        // A connectionString that is not url safe will likely generate error(s)
+        // and not be able to connect to room.
+        String urlStart = "http://host/";
+        String connectionString = urlStart + Config.getAppKey() + "/"
+                + roomName + "/" + dateString + "/" + duration;
+        info += "Precursor connectionString: \"" + connectionString + "\"\r\n";
+        URL urlObject = null;
+        URI uriObject = null;
         try {
-            uri = new URI("http", "host", "/" + roomName + "/", null);
+            urlObject = new URL(connectionString);
+            uriObject =
+                    new URI(urlObject.getProtocol(), urlObject.getUserInfo(), urlObject.getHost(),
+                            urlObject.getPort(), urlObject.getPath(),
+                            urlObject.getQuery(), urlObject.getRef());
+        } catch (MalformedURLException e) {
+            info += "Error: Could not create URL safe connectionString:\r\n" + e.getMessage();
+            Log.e(TAG, info);
+            return null;
         } catch (URISyntaxException e) {
-            Log.e(TAG, e.getMessage(), e);
+            info += "Error: Could not create URL safe connectionString:\r\n" + e.getMessage();
+            Log.e(TAG, info);
+            return null;
         }
 
-        String uriStr = uri.toString();
-
-        /* Parse roomNameEncoded from:
-        http://host/<roomNameEncoded>/
+        // Add credentials to string.
+        String uriString = uriObject.toString();
+        /* Parse connectionString from:
+        http://host/<connectionString>
         */
-        roomNameEncoded = uriStr.substring("http://host/".length(), uriStr.length() - 1);
+        connectionString = uriString.substring(urlStart.length(), uriString.length())
+                + "?cred=" + cred;
+        info += "URL safe connectionString: \"" + connectionString + "\"";
+        Log.d(TAG, info);
 
-        return Config.getAppKey() + "/"
-                + roomNameEncoded + "/" + dateString + "/" + duration + "?cred="
-                + cred;
+        return connectionString;
     }
 
     /**
